Highscore, enemy and player update