@@ -46,6 +46,16 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
+            <!-- for testing -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+
             <!-- execute the resulting project -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
